--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "re-base": "^1.5.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3"
   },
